# correspodence-go

./: .gitignore  LICENSE  README.md  pyproject.toml
correspodence_go/: __init__.py  __main__.py  board.py  cli.py  image_renderer.py
